--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2488,7 +2488,7 @@ input, select, textarea {
 			content: '';
 			display: block;
 			position: absolute;
-			left: 0;
+            left:0;
 			top: 0;
 			background-image: url("images/overlay.png");
 			width: 100%;
@@ -3088,16 +3088,21 @@ input, select, textarea {
 			bottom: 0;
 		}
 
-		.spotlight.left .content, .spotlight.right .content {
+		.spotlight.right .content {
 			height: 101%;
 			padding: 6em 3em;
 			top: 0;
 			width: 28em;
 		}
 
+
 		.spotlight.left .content {
 			border-right-width: 0.35em;
 			left: 0;
+            height: 101%;
+            padding: 6em 3em;
+            top: 0;
+            width: 28em;
 		}
 
 		.spotlight.right .content {
@@ -3418,7 +3423,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #272833;
+		background-color: #d7cbd5;
 		background-image: url("../../images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
